force-app/main/default/objects/Diagnose__c/Diagnose__c.object-meta.xml
<CustomObject>
    <label>Diagnose</label>
    <nameField>
        <label>Diagnose</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnoses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>