force-app/main/default/objects/Diagnose__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>TextArea</type>
</CustomField>