force-app/main/default/objects/Diagnose__c/fields/ICD_10_3_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_3_Code__c</fullName>
    <label>ICD-10-3 Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>