force-app/main/default/objects/Diagnose__c/fields/ICD_3_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD_3_Code__c</fullName>
    <label>ICD-3 Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>