force-app/main/default/objects/Diagnose__c/fields/WHO_Full_Description__c.field-meta.xml
<CustomField>
    <fullName>WHO_Full_Description__c</fullName>
    <label>WHO Full Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>